# Altman-Z-Score

./: .env.example  .gitignore  APIS.md  CHANGELOG.md  CODE_REVIEW_RECOMMENDATIONS.md  DECISIONS.md  DECISIONS.md.removed  DataFetching.md  DataFetching.mp  LEARNINGS.md  LEARNINGS_yfinance_industry_sector.md  LICENSE  ModelReference.md  ModelSelection.md  OneStockAnalysis.md  PLAN.md  README.md  READMEai.md  REFACTORING_PLAN.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY_v2.7.1.md  TODO-Codex.md  TODO-International-Fallback.md  TODO-Refined.md  TODO.md  ai_bootstrap.py  altman_zscore.py  altmans.md  analyze.py  code_review.md  competition roadmap.md  config.py  current_deps.txt  debug_thresholds.py  evaluate_portfolio.py  financials.py  finnhub_demo.py  genai_health.py  genai_leaders.xlsx  generate_readme_table.py  (+21 more)
.github/: copilot-instructions.md
OLD/: APIS.md  DECISIONS.md  LEARNINGS.md  README.md  TODO.md  analyze.py  debug_xbrl.py  portfolio.py
OLD/scripts/: test_yfinance_ticker.py  validate_ciks.py  validate_portfolio_ciks.py
OLD/tests/: test_yfinance_ticker.py
docs/: ai_pipeline.md  venv_setup.md
output/: TESTED_COMPANIES.md
output/9984.T/: yf_info.json  zscore_9984.T_error.csv  zscore_9984.T_error.json
output/AAL/: company_info.json  company_officers.json  dividends.csv  financials_quarterly.json  financials_raw.json  historical_prices.csv  institutional_holders.json  llm_commentary_prompt.txt  major_holders.json  recommendations.json  sec_edgar_company_info.json  weekly_prices.csv  weekly_prices.json  zscore_AAL.csv  zscore_AAL.json  (+1 more)
scripts/: test_company_status.py  test_data_validation.py  test_main_pipeline.py  test_monthly_prices.py  test_openai_field_mapping.py  test_plot_visualizations.py  validate_ciks.py  validate_portfolio_ciks.py  validate_single_cik.py
tests/: test_ai_parsing.py  test_cik_lookup.py  test_company_profile_real.py  test_company_status.py  test_compute_zscore.py  test_compute_zscore_private.py  test_compute_zscore_private_multi.py  test_compute_zscore_sonos.py  test_data_processing.py  test_fetch_financials.py  test_finnhub.py  test_formulas.py  test_integration_main.py  test_openai_helpers.py  test_pipeline_integration.py  test_plotting_helpers.py  test_plotting_terminal.py  test_private_model_multi.py  test_zscore_models.py
(+1456 files in other folders)
