[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altman-zscore"
version = "0.1.0"
description = "Single-stock Altman Z-Score trend analysis tool"
authors = [{name = "Fabio Correa", email = "fabio@correax.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "pydantic",
    "requests",
    "yfinance",
    "sec-edgar-downloader",
    "matplotlib",
    "python-dotenv"
]

[project.optional-dependencies]
xbrl = ["arelle"]
plotly = ["plotly"]
test = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=3 --disable-warnings -v"