[metadata]
name = altman-z-score
version = 0.1.0
description = Calculate Altman Z-Score for companies using SEC EDGAR data

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas>=2.2.0
    yfinance>=0.2.60
    requests>=2.31.0
    beautifulsoup4>=4.12.0
    sec-edgar-downloader>=5.0.0
    python-dotenv>=1.0.0
    tabulate>=0.9.0

[options.extras_require]
dev =
    types-requests>=2.31.0
    pandas-stubs>=2.2.0
    types-python-dateutil>=2.8.2
